--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.3.0",
+  "version": "1.3.1",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -71,14 +71,14 @@
     "react-is": "^17.0.2",
     "sass": "^1.49.0",
     "size-limit": "^7.0.5",
-    "styled-components": "^5.3.3",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4"
   },
   "dependencies": {
     "@react-spring/web": "^9.4.2",
-    "react-use-gesture": "^9.1.3"
+    "react-use-gesture": "^9.1.3",
+    "styled-components": "^5.3.3",
   },
   "keywords": [
     "liquidswipe",
