--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
   "dependencies": {
     "@react-spring/web": "^9.4.2",
     "react-use-gesture": "^9.1.3",
-    "styled-components": "^5.3.3",
+    "styled-components": "^5.3.3"
   },
   "keywords": [
     "liquidswipe",
